refactor: rewrite apis and pages
