# backend/docs/swagger.yaml
@@ -12,13 +12,27 @@ definitions:
     type: object
   model.BaseInfo:
     properties:
+      appCode:
+        type: string
+      appName:
+        type: string
       browser:
         type: string
       browserVersion:
         type: string
+      clientHeight:
+        type: integer
+      clientWidth:
+        type: integer
+      colorDepth:
+        type: integer
       createdAt:
         type: string
+      deviceId:
+        type: string
       deviceType:
+        type: string
+      ext:
         type: string
       id:
         type: integer
@@ -28,17 +42,35 @@ definitions:
         type: string
       osVersion:
         type: string
+      pageId:
+        type: string
+      pixelDepth:
+        type: integer
+      platform:
+        type: string
       projectId:
         type: integer
       screenHeight:
         type: integer
       screenWidth:
         type: integer
+      sdkUserUuid:
+        type: string
+      sdkVersion:
+        type: string
+      sendTime:
+        type: integer
+      sessionId:
+        type: string
       updatedAt:
         type: string
       userAgent:
         type: string
       userId:
+        type: string
+      userUuid:
+        type: string
+      vendor:
         type: string
     type: object
   model.ClickEvent:
@@ -139,28 +171,68 @@ definitions:
     type: object
   model.PerformanceEvent:
     properties:
+      connectEnd:
+        type: number
+      connectStart:
+        type: number
       createdAt:
         type: string
       decodedBodySize:
         type: integer
+      dom:
+        type: number
+      domainLookupEnd:
+        type: number
+      domainLookupStart:
+        type: number
       duration:
         type: number
+      encodedBodySize:
+        type: integer
       event:
         $ref: '#/definitions/model.Event'
       eventId:
         type: integer
+      fetchStart:
+        type: number
+      firstbyte:
+        type: number
       id:
         type: integer
+      initiatorType:
+        description: 资源性能指标
+        type: string
+      loadon:
+        type: number
+      ready:
+        type: number
+      requestStart:
+        type: number
       requestUrl:
         type: string
+      res:
+        type: number
       resourceType:
         type: string
       responseEnd:
         type: number
+      responseStart:
+        type: number
       responseStatus:
         type: string
+      ssllink:
+        type: number
+      startTime:
+        type: number
+      trans:
+        type: number
       transferSize:
         type: integer
+      ttfb:
+        type: number
+      tti:
+        description: 页面性能指标
+        type: number
       updatedAt:
         type: string
     type: object
